--- a/eProfileDesign.css
+++ b/eProfileDesign.css
@@ -10,7 +10,7 @@ h1 {
 } 
 
 h2 {
-    text-align: center;
+    margin-left: 100px;
     color:orangered
 }
 
@@ -27,11 +27,27 @@ th,td,tr {
     width: 125px;
 }
 
+ul {
+    list-style-type: square;
+
+}
+
 button {
-    background-color: black;
+    background-color: pink;
 }
 .center {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 }
+
+.parent {
+    margin: 1rem;
+    padding: 2rem 2rem;
+    text-align: center;
+  }
+  .child {
+    display: inline-block;
+    padding: 1rem 1rem;
+    vertical-align: middle;
+  }
