--- a/eProfileDesign.css
+++ b/eProfileDesign.css
@@ -114,24 +114,7 @@ button {
     }
   }
 
-  /* The actual timeline (the vertical ruler) */
-.timeline {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  /* The actual timeline (the vertical ruler) */
-  .timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: lavenderblush;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
-  }
+
   
   /* Container around content */
   .container {
@@ -148,11 +131,12 @@ button {
     width: 25px;
     height: 25px;
     right: -17px;
-    background-color: lavenderblush;
+    background-color: #FF9F55;
     border: 4px solid #FF9F55;
-    top: 15px;
+    top: 80px;
     border-radius: 50%;
     z-index: 1;
+    text-align: center;
   }
   
   /* Place the container to the left */
